--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Галерея зображень</title>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/basicLightbox/5.0.4/basicLightbox.min.css" />
+
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -21,7 +23,8 @@
         </li>
     </main>
     <footer></footer>
-    <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/basicLightbox/5.0.4/basicLightbox.min.js"></script>
+
     <script src="./js/gallery.js" type="module"></script>
 
 </body>
